--- a/package.json
+++ b/package.json
@@ -9,12 +9,8 @@
         "url": "http://github.com/harthur/hog-descriptor.git"
     },
     "dependencies": {
-        "assert": "^1.4.1",
-        "canvas": "^1.6.5",
-        "fs": "0.0.1-security",
         "image-js": "^0.11.5",
-        "ml-distance": "^2.1.1",
-        "underscore": "*"
+        "ml-distance": "^2.1.1"
     },
     "keywords": [
         "image processing",
