--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
     "name": "hog-descriptor",
     "description": "Histogram of Oriented Gradients (HOG) descriptor extractor",
     "version": "0.5.0",
-    "author": "Heather Arthur <fayearthur@gmail.com>",
+    "author": "jajoe",
     "main": "./hog",
     "repository": {
         "type": "git",
-        "url": "http://github.com/harthur/hog-descriptor.git"
+        "url": "https://github.com/image-js/hog"
     },
     "dependencies": {
         "image-js": "^0.11.5",
         "ml-distance": "^2.1.1"
+    },
+    "devDependencies": {
+        "eslint": "^4.1.1",
+        "eslint-config-cheminfo": "^1.6.0",
+        "eslint-plugin-no-only-tests": "^2.0.0",
+        "jest": "^20.0.4",
+        "npm-run-all": "^4.0.2"
     },
     "keywords": [
         "image processing",
