--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "scripts": {
         "eslint": "eslint src",
         "eslint-fix": "npm run eslint -- --fix",
-        "prepublish": "rollup -c",
-        "test": "run-s testonly",
+        "test": "run-s testonly eslint",
         "testonly": "jest"
     },
     "dependencies": {
