--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "description": "Histogram of Oriented Gradients (HOG) descriptor extractor",
     "version": "0.5.0",
     "author": "jajoe",
-    "main": "lib/index.js",
-    "module": "src/index.js",
+    "main": "src/index.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/image-js/hog"
