only publish src

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "author": "jajoe",
   "main": "src/index.js",
+  "files": [
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/image-js/hog"
