--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hog-features",
-  "description": "Histogram of Oriented Gradients (HOG) descriptor extractor",
+  "description": "Histogram of Oriented Gradients (HOG) features",
   "version": "0.0.2",
   "author": "jajoe",
   "main": "src/index.js",
@@ -27,8 +27,11 @@
     "npm-run-all": "^4.0.2"
   },
   "keywords": [
+    "HOG descriptor",
+    "HOG features",
     "image processing",
-    "computer vision"
+    "computer vision",
+    "features extraction"
   ],
   "license": "MIT"
 }
